--- a/style.css
+++ b/style.css
@@ -16,6 +16,25 @@ h1 {
   margin-top: 100px;
 }
 
+h2 {
+  color: black;
+  font-size: 32px;
+  text-align: center;
+  margin-top: 100px;
+  /* margin-right: 50px;
+  margin-left: 220px;  */
+}
+
+
+h3 {
+  color: black;
+  font-size: 18px;
+  text-align: right;
+  margin-top: 25px;
+  margin-right: 50px;
+  margin-left: 220px; */
+}
+
 h4 {
   color: black;
   font-size: 18px;
