--- a/style.css
+++ b/style.css
@@ -25,14 +25,18 @@ h2 {
   margin-left: 220px;  */
 }
 
-
 h3 {
-  color: black;
   font-size: 18px;
-  text-align: right;
-  margin-top: 25px;
+  text-align: center;
+  margin-top: 0px;
   margin-right: 50px;
-  margin-left: 220px; */
+  position: absolute;
+  right: 0;
+  top: 25px;
+  width: 230px;
+  color: white;
+  background-color: #33b2f6;
+  border: 1px solid #89d6ff;
 }
 
 h4 {
